# relay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  config.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/.specify/: init-options.json  integration.json
dashboard/.specify/extensions/: .registry
dashboard/.specify/integrations/: claude.manifest.json  speckit.manifest.json
dashboard/.specify/workflows/: workflow-registry.json
dashboard/src/: App.tsx  api.ts  auth.tsx  main.tsx  types.ts
proxy/: __init__.py  auth.py  config.py  crypto.py  deps.py  main.py  metering.py
proxy/backends/: __init__.py  base.py  ollama.py  openai_compat.py
proxy/db/: __init__.py  migrate.py  models.py  session.py
proxy/routers/: credentials.py  keys.py  proxy.py  stats.py
proxy/tests/: conftest.py  test_auth.py  test_credentials.py  test_isolation.py  test_metering.py  test_proxy.py  test_stats.py
specs/001-llm-proxy-metering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-user-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+31 files in other folders)
