[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay"
version = "0.1.0"
description = "Self-hosted LLM proxy with usage metering"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.19",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    # fastapi-users: self-hosted auth (signup, login, JWT, bcrypt) — stdlib cannot provide
    "fastapi-users[sqlalchemy]>=13.0.0",
    # cryptography: Fernet authenticated symmetric encryption for provider credentials
    "cryptography>=42.0.0",
    # email-validator: required by fastapi-users for email field validation
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["proxy/tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
